--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <label for="places">Input Name</label><br>
         <input type="text" id="places">
     </div>
-    <button>Submit</button>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis nisi nam debitis aspernatur voluptatem
+        perferendis earum aliquam modi, repellendus illum reprehenderit incidunt magni optio cum ex eveniet est eum
+        dolores!</p>
+    <button class="btn">Submit</button>
     <script src="./js/script.js"></script>
 </body>
 
