updated tags and style sheet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis nisi nam debitis aspernatur voluptatem
         perferendis earum aliquam modi, repellendus illum reprehenderit incidunt magni optio cum ex eveniet est eum
         dolores!</p>
+    <p class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo pariatur harum eveniet animi sint provident
+        voluptatem! Nesciunt amet, quia consequatur, sapiente deserunt, aspernatur quos voluptatem vero et fugiat optio
+        asperiores.</p>
     <button class="btn">Submit</button>
     <script src="./js/script.js"></script>
 </body>
