--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Form</h1>
     <div>
         <label for="places">Input Name</label><br>
         <input type="text" id="places">
