--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>Form</h1>
+    <h1>User Form</h1>
+    <h2>sub title</h2>
     <div>
         <label for="places">Input Name</label><br>
         <input type="text" id="places">
